test/files/neg/macro-invalidsig-params-badtype.check
Impls_Macros_1.scala:8: error: macro implementation has wrong shape:
 required: (c: scala.reflect.macros.Context)(x: c.Expr[Int]): c.universe.Tree
 found   : (c: scala.reflect.macros.Context)(x: c.universe.Symbol): Nothing
type mismatch for parameter x: c.Expr[Int] does not conform to c.universe.Symbol
  def foo(x: Int) = macro Impls.foo
                                ^
one error found
